<resources>
    <string name="app_name">Health</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_vitamins">Vitamins</string>
    <string name="title_food">Food</string>
    <string name="title_profile">Profile</string>

    //profile fragment strings
    <string name="weight">Вес</string>
    <string name="kg">кг</string>
    <string name="height">Рост</string>
    <string name="cm">см</string>
    <string name="years">лет</string>
    <string name="age">Возраст</string>
    <string name="m">М</string>
    <string name="f">Ж</string>
    <string name="sex">Пол</string>
    <string name="save">save</string>
    <string name="water">Вода</string>
    <string name="add_new_food">Добавить новый рецепт</string>
    <string name="add">Добавить</string>
    <string name="enter_value_gram">Введите количество (г)</string>
    <string name="enter_value_milliliter">Укажите объем (мл)</string>
    <string name="_300">300</string>
    <string name="confirm">Подтвердить</string>
    <string name="enter_value">Введите значение</string>
    <string name="_200">200</string>
    <string name="Ok">Ок</string>
    <string name="Delete">Удалить</string>
    <string name="null_data">Нет данных</string>
</resources>