<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ProfileFragment">

    <TextView
        android:id="@+id/weight_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/weight_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="@string/kg"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/weight_textView"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/weight_textView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/height_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/height_editText"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/height_editText" />

    <EditText
        android:id="@+id/height_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:hint="@string/cm"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weight_editText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/age_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/age_editText"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/age_editText" />

    <EditText
        android:id="@+id/age_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:hint="@string/years"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/height_editText"
        android:autofillHints="" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sex_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scaleX="2"
        android:scaleY="2"
        android:textOff="@string/m"
        android:textOn="@string/f"
        android:textSize="14sp"
        android:theme="@style/SwitchSex"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/age_editText"
        app:showText="true" />

    <TextView
        android:id="@+id/sex_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sex_switch"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/sex_switch" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_save_changes"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_switch"
        app:layout_constraintVertical_bias="0.2"
        android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>